--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div>
             <AppSelectingForm />
         </div>,
-        document.getElementById('ui')
+        document.getElementById('cz')
     );
 </script>
 
